# pkg_metadata

./: .pre-commit-config.yaml  LICENSE  README.md  manual_test.py  pyproject.toml  tox.ini
docs/source/: conf.py  index.rst  pkg_metadata.rst
src/pkg_metadata/: __init__.py  metadata.py
tests/: test_basic.py
